Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130010

userDefinedMesh is ignored

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.1, 6.8.2, 6.9.0 FF
    • 6.8.0
    • Graphs: 3D
    • None
    • 1728887e0 (dev), b4922fc50 (6.8), 017b4cc99 (6.8.1)

      Setting mesh: Abstract3DSeries.Mesh.UserDefined in a Surface3DSeries and then giving a mesh with userDefinedMesh does nothing. The default selection indicator is still shown, even though  it should be replaces with the given mesh. See https://doc.qt.io/qt-6/qml-qtgraphs-surface3dseries.html#mesh-prop

      Regression from QtDataVisualization

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes