React to userDefinedMesh and mesh change in Surface3D

Pick-to: 6.8.1
Fixes: QTBUG-130010
Fixes: QTBUG-130011
Fixes: QTBUG-130870
Change-Id: I3516b1af5a1af65ad0060c775143e73af8732167
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 1728887e0a967b30f4549edd5716df0803e16a61)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>