src/graphs3d/qml/qquickgraphssurface.cpp
@@ -13,7 +13,6 @@
 #include "qsurface3dseries_p.h"
 #include "qsurfacedataproxy_p.h"
 #include "qvalue3daxis_p.h"
-#include "surfaceselectioninstancing_p.h"
 
 #include <QtQuick3D/private/qquick3dcustommaterial_p.h>
 #include <QtQuick3D/private/qquick3ddefaultmaterial_p.h>
@@ -164,8 +163,6 @@ QQuickGraphsSurface::~QQuickGraphsSurface()
     const QMutexLocker locker2(mutex());
     for (const auto &model : std::as_const(m_model))
         delete model;
-    delete m_instancing;
-    delete m_sliceInstancing;
 }
 
 void QQuickGraphsSurface::setAxisX(QValue3DAxis *axis)
@@ -222,6 +219,139 @@ void QQuickGraphsSurface::handleWireframeColorChanged()
             auto gridMaterial = static_cast<QQuick3DPrincipledMaterial *>(gridMaterialRef.at(0));
             gridMaterial->setBaseColor(gridColor);
         }
+    }
+}
+
+void QQuickGraphsSurface::handleMeshTypeChanged(QAbstract3DSeries::Mesh mesh)
+{
+    QSurface3DSeries *sender = qobject_cast<QSurface3DSeries *>(QObject::sender());
+    changePointerMeshTypeForSeries(mesh, sender);
+    if (sliceView())
+        changeSlicePointerMeshTypeForSeries(mesh, sender);
+}
+
+void QQuickGraphsSurface::changePointerMeshTypeForSeries(QAbstract3DSeries::Mesh mesh,
+                                                         QSurface3DSeries *series)
+{
+    changePointerForSeries(getMeshFileName(mesh, series), series);
+}
+
+void QQuickGraphsSurface::changeSlicePointerMeshTypeForSeries(QAbstract3DSeries::Mesh mesh,
+                                                              QSurface3DSeries *series)
+{
+    changeSlicePointerForSeries(getMeshFileName(mesh, series), series);
+}
+
+QString QQuickGraphsSurface::getMeshFileName(QAbstract3DSeries::Mesh mesh,
+                                             QSurface3DSeries *series) const
+{
+    QString fileName = {};
+    switch (mesh) {
+    case QAbstract3DSeries::Mesh::Sphere:
+        fileName = QStringLiteral("defaultMeshes/sphereMesh");
+        break;
+    case QAbstract3DSeries::Mesh::Bar:
+    case QAbstract3DSeries::Mesh::Cube:
+        fileName = QStringLiteral("defaultMeshes/barMesh");
+        break;
+    case QAbstract3DSeries::Mesh::Pyramid:
+        fileName = QStringLiteral("defaultMeshes/pyramidMesh");
+        break;
+    case QAbstract3DSeries::Mesh::Cone:
+        fileName = QStringLiteral("defaultMeshes/coneMesh");
+        break;
+    case QAbstract3DSeries::Mesh::Cylinder:
+        fileName = QStringLiteral("defaultMeshes/cylinderMesh");
+        break;
+    case QAbstract3DSeries::Mesh::BevelBar:
+    case QAbstract3DSeries::Mesh::BevelCube:
+        fileName = QStringLiteral("defaultMeshes/bevelBarMesh");
+        break;
+    case QAbstract3DSeries::Mesh::UserDefined:
+        fileName = series->userDefinedMesh();
+        break;
+    default:
+        fileName = QStringLiteral("defaultMeshes/sphereMesh");
+    }
+    return fileName;
+}
+
+void QQuickGraphsSurface::handlePointerChanged(const QString &filename)
+{
+    QSurface3DSeries *sender = qobject_cast<QSurface3DSeries *>(QObject::sender());
+    changePointerForSeries(filename, sender);
+    changeSlicePointerForSeries(filename, sender);
+}
+
+void QQuickGraphsSurface::changePointerForSeries(const QString &filename, QSurface3DSeries *series)
+{
+    if (!filename.isEmpty()) {
+        // Selection pointer
+        QQuick3DNode *parent = rootNode();
+
+        QQuick3DPrincipledMaterial *pointerMaterial = nullptr;
+        QQuick3DModel *pointer = m_selectionPointers.value(series);
+
+        if (pointer) {
+            // Retrieve the already created material
+            QQmlListReference materialRef(pointer, "materials");
+            pointerMaterial = qobject_cast<QQuick3DPrincipledMaterial *>(materialRef.at(0));
+            // Delete old model
+            delete pointer;
+        } else {
+            // No pointer yet; create material for it
+            pointerMaterial = new QQuick3DPrincipledMaterial();
+            pointerMaterial->setParent(this);
+            pointerMaterial->setBaseColor(theme()->singleHighlightColor());
+        }
+        // Create new pointer
+        pointer = new QQuick3DModel();
+        pointer->setParent(parent);
+        pointer->setParentItem(parent);
+        pointer->setSource(QUrl(filename));
+        pointer->setScale(QVector3D(0.05f, 0.05f, 0.05f));
+        // Insert to the map
+        m_selectionPointers.insert(series, pointer);
+        // Set material
+        QQmlListReference materialRef(pointer, "materials");
+        materialRef.append(pointerMaterial);
+    }
+}
+
+void QQuickGraphsSurface::changeSlicePointerForSeries(const QString &filename,
+                                                      QSurface3DSeries *series)
+{
+    if (!filename.isEmpty()) {
+        // Slice selection pointer
+        QQuick3DNode *sliceParent = sliceView()->scene();
+
+        QQuick3DPrincipledMaterial *slicePointerMaterial = nullptr;
+        QQuick3DModel *slicePointer = m_sliceSelectionPointers.value(series);
+
+        if (slicePointer) {
+            // Retrieve the already created material
+            QQmlListReference sliceMaterialRef(slicePointer, "materials");
+            slicePointerMaterial = qobject_cast<QQuick3DPrincipledMaterial *>(
+                sliceMaterialRef.at(0));
+            // Delete old model
+            delete slicePointer;
+        } else {
+            // No pointer yet; create material for it
+            slicePointerMaterial = new QQuick3DPrincipledMaterial();
+            slicePointerMaterial->setParent(sliceParent);
+            slicePointerMaterial->setBaseColor(theme()->singleHighlightColor());
+        }
+        // Create new pointer
+        slicePointer = new QQuick3DModel();
+        slicePointer->setParent(sliceParent);
+        slicePointer->setParentItem(sliceParent);
+        slicePointer->setSource(QUrl(filename));
+        slicePointer->setScale(QVector3D(0.05f, 0.05f, 0.05f));
+        // Insert to the map
+        m_sliceSelectionPointers.insert(series, slicePointer);
+        // Set material
+        QQmlListReference sliceMaterialRef(slicePointer, "materials");
+        sliceMaterialRef.append(slicePointerMaterial);
     }
 }
 
@@ -827,23 +957,10 @@ void QQuickGraphsSurface::componentComplete()
 {
     QQuickGraphsItem::componentComplete();
 
-    for (auto series : surfaceSeriesList())
+    for (auto series : surfaceSeriesList()) {
         addModel(series);
-
-    QQuick3DNode *parent = rootNode();
-
-    m_selectionPointer = new QQuick3DModel();
-    m_selectionPointer->setParent(parent);
-    m_selectionPointer->setParentItem(parent);
-    m_selectionPointer->setSource(QUrl(QStringLiteral("#Sphere")));
-    auto pointerMaterial = new QQuick3DPrincipledMaterial();
-    pointerMaterial->setParent(this);
-    pointerMaterial->setBaseColor(theme()->singleHighlightColor());
-    QQmlListReference materialRef(m_selectionPointer, "materials");
-    materialRef.append(pointerMaterial);
-    m_instancing = new SurfaceSelectionInstancing();
-    m_instancing->setScale(QVector3D(0.001f, 0.001f, 0.001f));
-    m_selectionPointer->setInstancing(m_instancing);
+        changePointerMeshTypeForSeries(series->mesh(), series);
+    }
 
     graphsInputHandler()->setGraphsItem(this);
 }
@@ -2010,9 +2127,17 @@ bool QQuickGraphsSurface::doPicking(QPointF position)
 void QQuickGraphsSurface::updateSelectedPoint()
 {
     bool labelVisible = false;
-    m_instancing->resetPositions();
-    if (sliceView() && sliceView()->isVisible())
-        m_sliceInstancing->resetPositions();
+
+    auto list = surfaceSeriesList();
+    for (auto series : list) {
+        // If the pointer and its instancing do not exist yet (as will happen in widget case),
+        // we must create them
+        if (!m_selectionPointers.value(series))
+            changePointerMeshTypeForSeries(series->mesh(), series);
+        m_selectionPointers.value(series)->setVisible(false);
+        if (sliceView() && sliceView()->isVisible())
+            m_sliceSelectionPointers.value(series)->setVisible(false);
+    }
 
     QPointF worldCoord;
     for (auto model : m_model) {
@@ -2043,13 +2168,15 @@ void QQuickGraphsSurface::updateSelectedPoint()
         selectedVertex.coord = model->selectedVertex.coord;
         if (model->series->isVisible() && !selectedVertex.position.isNull()
             && selectionMode().testFlag(QtGraphs3D::SelectionFlag::Item)) {
-            m_instancing->addPosition(selectedVertex.position);
+            m_selectionPointers.value(model->series)->setPosition(selectedVertex.position);
+            m_selectionPointers.value(model->series)->setVisible(true);
             QVector3D slicePosition = getNormalizedVertex(dataPos, false, false);
             if (sliceView() && sliceView()->isVisible()) {
                 if (selectionMode().testFlag(QtGraphs3D::SelectionFlag::Column))
                     slicePosition.setX(-slicePosition.z());
                 slicePosition.setZ(.0f);
-                m_sliceInstancing->addPosition(slicePosition);
+                m_sliceSelectionPointers.value(model->series)->setPosition(slicePosition);
+                m_sliceSelectionPointers.value(model->series)->setVisible(true);
             }
             if (model->picked) {
                 QVector3D labelPosition = selectedVertex.position;
@@ -2170,7 +2297,14 @@ void QQuickGraphsSurface::addModel(QSurface3DSeries *series)
             &QSurface3DSeries::wireframeColorChanged,
             this,
             &QQuickGraphsSurface::handleWireframeColorChanged);
-
+    connect(series,
+            &QSurface3DSeries::userDefinedMeshChanged,
+            this,
+            &QQuickGraphsSurface::handlePointerChanged);
+    connect(series,
+            &QSurface3DSeries::meshChanged,
+            this,
+            &QQuickGraphsSurface::handleMeshTypeChanged);
     if (sliceView())
         addSliceModel(surfaceModel);
 }
@@ -2180,24 +2314,10 @@ void QQuickGraphsSurface::createSliceView()
     setSliceOrthoProjection(true);
     QQuickGraphsItem::createSliceView();
 
-    for (auto surfaceModel : m_model)
+    for (auto surfaceModel : m_model) {
         addSliceModel(surfaceModel);
-
-    QQuick3DViewport *sliceParent = sliceView();
-
-    m_sliceSelectionPointer = new QQuick3DModel();
-    m_sliceSelectionPointer->setParent(sliceParent->scene());
-    m_sliceSelectionPointer->setParentItem(sliceParent->scene());
-    m_sliceSelectionPointer->setSource(QUrl(QStringLiteral("#Sphere")));
-    QQuick3DPrincipledMaterial *pointerMaterial = new QQuick3DPrincipledMaterial();
-    pointerMaterial->setParent(m_sliceSelectionPointer);
-    pointerMaterial->setBaseColor(theme()->singleHighlightColor());
-    QQmlListReference sliceMaterialRef(m_sliceSelectionPointer, "materials");
-    sliceMaterialRef.append(pointerMaterial);
-    m_sliceInstancing = new SurfaceSelectionInstancing();
-    m_sliceInstancing->setScale(QVector3D(0.001f, 0.001f, 0.001f));
-    m_sliceSelectionPointer->setInstancing(m_sliceInstancing);
-    m_sliceInstancing->setColor(theme()->singleHighlightColor());
+        changeSlicePointerMeshTypeForSeries(surfaceModel->series->mesh(), surfaceModel->series);
+    }
 }
 
 void QQuickGraphsSurface::updateSliceItemLabel(const QString &label, QVector3D position)
@@ -2305,9 +2425,18 @@ void QQuickGraphsSurface::addSliceModel(SurfaceModel *model)
 
 void QQuickGraphsSurface::updateSingleHighlightColor()
 {
-    m_instancing->setColor(theme()->singleHighlightColor());
-    if (sliceView())
-        m_sliceInstancing->setColor(theme()->singleHighlightColor());
+    auto list = surfaceSeriesList();
+    for (auto series : list) {
+        QQmlListReference pMaterialRef(m_selectionPointers.value(series), "materials");
+        auto pmat = qobject_cast<QQuick3DPrincipledMaterial *>(pMaterialRef.at(0));
+        if (pmat)
+            pmat->setBaseColor(theme()->singleHighlightColor());
+        if (sliceView()) {
+            QQmlListReference spMaterialRef(m_sliceSelectionPointers.value(series), "materials");
+            auto spmat = qobject_cast<QQuick3DPrincipledMaterial *>(spMaterialRef.at(0));
+            spmat->setBaseColor(theme()->singleHighlightColor());
+        }
+    }
 }
 
 void QQuickGraphsSurface::updateLightStrength()
